# Carolocup

./: .gitignore  README.md
01_Sensorik_Aktorik/Arduino_gesamt/: Arduino_gesamt.ino  BMI088.cpp  BMI088.h  aktorik.cpp  aktorik.h
01_Sensorik_Aktorik/Sensorik_gesamt/: BMI088.h  Sensorik_gesamt.ino  aktorik.cpp  qtr.h  rpm.h  serial.cpp  serial.h  tof.h
Aktorik/: Aktorik.ino  Aktorik_Erster_Entwurf.pptx  Anmeldung_Studienarbeit_Ansgar Stollburges.doc  Anmeldung_Studienarbeit_Dirk_Schanzenbach.doc  Lastenheft.docx  Lights.cpp  Lights.h  Links und Git.docx  Readme.md  Servo.cpp  Servo.h
Aktorik/Aktorik Code/: Lights.h  Motor.cpp  Motor.h  Servo.h  USB_Handle.h  test.txt
Aktorik/Aktorik_Code/: Lights.cpp  Motor.cpp  Motor.h  Servo.cpp  USB_Handle.cpp  USB_Handle.h  akt_servo.cpp  aktorik_code.ino
Aktorik/Platine/: 20200123_second_Platine_Power.b##  20200123_second_Platine_Power.brd  20200123_second_Platine_Power.sch  Carolo_20200123.b#1  (+29 more)
Arduino_SW_ALL/: Readme
Kalibrierung/: CalibrationCompile  VID5.XML  default.XML  out_camera_data.xml
Lidar/lidar/: CMakeLists.txt  README.md  package.xml
Lidar/lidar/src/: object_detection.cpp
ROS/: ReadMe.txt
Regler/: PI_Laengsregler.slx  PI_Laengsregler_2.slx  PI_Laengsregler_2.slxc  README.MD  README_ROS_Regler.txt  initial_data.asv  initial_data.m  zustandsRegler.slx  zustandsRegler.slxc
Sensorik_Aktorik/: BMI088.cpp  BMI088.h  Sensorik_Aktorik.ino  aktorik.cpp  aktorik.h  qtr.cpp  qtr.h  rpm.cpp  rpm.h  serial.cpp  serial.h  tof.cpp  tof.h
Spurerkennung/: calibrate.sh  launch.sh
lidar/: README.md
new_all/: Motor.cpp  USB_Handle.cpp  USB_Handle.h  new_all.ino
pi_laengsregler/: PI_Laengsregler.h  PI_Laengsregler_private.h  PI_Laengsregler_types.h  ert_main.cpp  multiword_types.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_initialize.cpp
stanley_querregler/: Stanley_Querregler_data.cpp  Stanley_Querregler_private.h  rtGetInf.h  rtGetNaN.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
(+1751 files in other folders)
